# MangoArmy-Launcher

./: .gitignore  .npmrc  README.md  TESTING_AUTOUPDATE.md  index.html  package-lock.json  package.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: release.yml
electron/: java-manager.js  main.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/sidecar/: launcher.js  package-lock.json  package.json
src-tauri/src/: lib.rs
src/lib/: minecraft.ts
