[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["MA Team"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tokio = "1.48.0"
tauri-plugin-shell = "2.3.3"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
sha2 = "0.10"
urlencoding = "2.1"
open = "5.0"
tauri-plugin-updater = "2.3.1"
tauri-plugin-process = "2.2.0"

[profile.release]
incremental = false
lto = "thin"
